<resources>
    <string name="app_name">Let me listen</string>
    <string name="button1">실내모드</string>
    <string name="textview1">가전기기, 화재경보음</string>
    <string name="button2">실외모드</string>
    <string name="textview2">자동차 경적, 화재경보음, 개 짖는 소리</string>
    <string name="setting">SETTING</string>
    <string name="title_activity_settings">설정</string>

    <!-- Preference Titles -->
    <string name="header1">1</string>
    <string name="header2">2</string>
    <string name="header3">3</string>
    <string name="header4">4</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_input_setting_fragment">InputSettingFragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="title_activity_output_setting_fragment">OutputSettingFragment</string>
    <string name="push_alarm_test">push alarm test</string>
</resources>