<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button1"
            app:backgroundTint="@color/purple_200"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="228dp"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/textview1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button2"
            app:backgroundTint="@color/purple_200"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="441dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="100dp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/push_alarm_test"
            android:onClick="onClick"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >


        <ImageButton
            android:id="@+id/button3"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:contentDescription="@string/setting"
            android:onClick="onClick" />

    </LinearLayout>
</LinearLayout>